# devcontainer-demo

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
devcontainer_demo/: main.py  test_main.py
docker/: app.Dockerfile  dev.Dockerfile
